@@ -1,3 +1,8 @@
+2003-02-23  David N. Welton  <davidw@dedasys.com>
+
+	* base64.tcl: Bumped base64.tcl Tcl requirement to 8.2, swapped
+	out regsub for string map.
+
 2003-01-25  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* yencode.tcl:
